--- a/PackageEasy/PackageEasy/Themes/Black.xaml
+++ b/PackageEasy/PackageEasy/Themes/Black.xaml
@@ -13,8 +13,9 @@
     <SolidColorBrush x:Key="watingBackground" Color="LightGray"></SolidColorBrush>
     <SolidColorBrush x:Key="mainForeground" Color="White"></SolidColorBrush>
     <!--button-->
-    <SolidColorBrush x:Key="CommonButtonBackgroundBrush" Color="White"></SolidColorBrush>
-    <SolidColorBrush x:Key="CommonButtonBorderBrush" Color="LightGray"></SolidColorBrush>
+    <SolidColorBrush x:Key="CommonButtonBackgroundBrush" Color="#3D3D3D"></SolidColorBrush>
+    <SolidColorBrush x:Key="CommonButtonBorderBrush" Color="#26FFFFFF"></SolidColorBrush>
+    <SolidColorBrush x:Key="CommonButtonForeground" Color="White"></SolidColorBrush>
     <!--SelecetRadioButtonStyle-->
     <SolidColorBrush x:Key="selecetRadioIsCheckedForeground" Color="#5E70A7" />
     <SolidColorBrush x:Key="selecetRadioIsCheckedBackground" Color="#D9E6F6" />
@@ -32,8 +33,8 @@
     <!-- default accent colors and brushes -->
     <SolidColorBrush x:Key="progressColoBrush" Color="#FF006CBE" />
     <!--CommonTextBox-->
-    <SolidColorBrush x:Key="commonTextBoxBackground" Color="#FFFFFF" />
-    <SolidColorBrush x:Key="commonTextBoxBorderBrush" Color="#26000000" />
+    <SolidColorBrush x:Key="commonTextBoxBackground" Color="#3D3D3D" />
+    <SolidColorBrush x:Key="commonTextBoxBorderBrush" Color="#26FFFFFF" />
     <SolidColorBrush x:Key="commonDisableTextBoxBackground" Color="#4C919191"></SolidColorBrush>
     <!--ResultLightView-->
     <SolidColorBrush x:Key="resultLightViewForeground" Color="#26000000"></SolidColorBrush>
@@ -41,7 +42,7 @@
     <!--DataGridStyle-->
     <SolidColorBrush x:Key="datagridLinesBrush" Color="DimGray" />
     <SolidColorBrush x:Key="datagridColumnHeaderBackground" Color="#E9ECF6" />
-    <SolidColorBrush x:Key="datagridColumnHeaderForeground" Color="White" />
+    <SolidColorBrush x:Key="datagridColumnHeaderForeground" Color="Black" />
     <!--主页颜色-->
     <SolidColorBrush Color="#1F1F1F" x:Key="titleColoBrushes"></SolidColorBrush>
     <SolidColorBrush Color="#1F1F1F" x:Key="mainTablePanelBrushes" ></SolidColorBrush>
@@ -66,4 +67,6 @@
     <SolidColorBrush x:Key="settingControlBottonBackground" Color="#5D6B99"></SolidColorBrush>
     <!--插件鼠标移上颜色-->
     <SolidColorBrush x:Key="pluginMouseOverBackground" Color="#E6E7EF" ></SolidColorBrush>
+    <!--基础页面颜色-->
+    <SolidColorBrush x:Key="baseInfoForeground" Color="White"></SolidColorBrush>
 </ResourceDictionary>
