--- a/PackageEasy/PackageEasy/Views/BaseInfoView.xaml
+++ b/PackageEasy/PackageEasy/Views/BaseInfoView.xaml
@@ -8,7 +8,7 @@
              xmlns:controls="https://dicgo.com/controls"
              xmlns:lang="clr-namespace:PackageEasy.Common.Data;assembly=PackageEasy.Common"
              mc:Ignorable="d" 
-             d:DesignHeight="550" d:DesignWidth="800">
+             d:DesignHeight="550" d:DesignWidth="800" Foreground="{DynamicResource baseInfoForeground}">
 
     <Grid Margin="30,20,0,0">
         <Grid.RowDefinitions>
@@ -38,11 +38,11 @@
         <TextBlock Grid.Row="1" Text="应用程序版本:" lang:LanguageManager.LangText="应用程序版本:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
             <TextBox   Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource CommonTextBox}" Text="{Binding ApplicationVersion,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Width="150" Height="30" VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>
-            <CheckBox Content="卸载时显示" lang:LanguageManager.LangText="卸载时显示" IsChecked="{Binding IsShowInUnInstall}" HorizontalContentAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"></CheckBox>
+            <CheckBox Content="卸载时显示" Foreground="{DynamicResource baseInfoForeground}" lang:LanguageManager.LangText="卸载时显示" IsChecked="{Binding IsShowInUnInstall}" HorizontalContentAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"></CheckBox>
         </StackPanel>
         <TextBlock Grid.Row="2" Text="文件版本:" lang:LanguageManager.LangText="文件版本:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
         <!--<TextBox   Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource CommonTextBox}" Text="{Binding ApplicationVersion,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Width="150" Height="25" VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>-->
-        <controls:PlaceholderTextBox Grid.Column="1" TipsTop="5"  Grid.Row="2" PlaceHolderText="例如:1.0.0.1"  HorizontalAlignment="Left"  Width="150" Height="30" Style="{StaticResource PlaceholderTextBoxStyle}"  Margin="5,10,0,10" TextWrapping="Wrap" Text="{Binding ProductVersion,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  VerticalAlignment="Center" ></controls:PlaceholderTextBox>
+        <controls:PlaceholderTextBox Grid.Column="1" TipsTop="8"  Grid.Row="2" PlaceHolderText="例如:1.0.0.1"  HorizontalAlignment="Left"  Width="150" Height="30" Style="{StaticResource PlaceholderTextBoxStyle}"  Margin="5,10,0,10" TextWrapping="Wrap" Text="{Binding ProductVersion,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  VerticalAlignment="Center" ></controls:PlaceholderTextBox>
 
         <TextBlock  Grid.Row="3" Text="公司名称:" lang:LanguageManager.LangText="公司名称:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
         <TextBox    Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource CommonTextBox}" Text="{Binding CompanyName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Width="150" Height="30" VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>
@@ -82,7 +82,7 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <CheckBox Margin="3,0,3,3" IsChecked="{Binding IsSelected,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Content="{Binding LanguageName}"></CheckBox>
+                    <CheckBox Margin="3,0,3,3" Foreground="{DynamicResource baseInfoForeground}" IsChecked="{Binding IsSelected,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Content="{Binding LanguageName}"></CheckBox>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
@@ -110,21 +110,21 @@
                 <ComboBox IsEditable="False" HorizontalAlignment="Left" MinWidth="150" Style="{StaticResource  CommonComboBoxStyle}" Height="30" VerticalContentAlignment="Center" SelectedItem="{Binding SystemDir}" ItemsSource="{Binding SystemDirList}" Margin="5,10,0,10"></ComboBox>
                 <TextBox Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Text="{Binding UserDirPath,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Style="{StaticResource CommonTextBox}" Width="100" Visibility="Collapsed"  VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>
             </StackPanel>
-            <CheckBox Content="允许更改目录" Margin="5,0,0,0" IsChecked="{Binding CanUserChangeDir,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" lang:LanguageManager.LangText="允许更改目录" VerticalContentAlignment="Center"></CheckBox>
+            <CheckBox Content="允许更改目录" Foreground="{DynamicResource baseInfoForeground}" Margin="5,0,0,0" IsChecked="{Binding CanUserChangeDir,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" lang:LanguageManager.LangText="允许更改目录" VerticalContentAlignment="Center"></CheckBox>
         </StackPanel>
 
         <TextBlock Grid.Row="3" Text="授权文件:" Grid.Column="2" lang:LanguageManager.LangText="授权文件:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
         <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="3">
             <TextBox Grid.Row="1" IsEnabled="{Binding Path=IsChecked,ElementName=licenseChecked}" Grid.Column="1" HorizontalAlignment="Left" Text="{Binding LicenseFilePath,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource CommonTextBox}" Width="150" Height="30" VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>
             <Button Width="50"  IsEnabled="{Binding Path=IsChecked,ElementName=licenseChecked}"  Height="30" Content="..." Style="{StaticResource CommonButtonStyle}" Command="{Binding SelectedLicenseCommand}" Margin="5,0,0,0"></Button>
-            <CheckBox Content="启用授权" lang:LanguageManager.LangText="启用授权" IsChecked="{Binding IsLicenseChecked,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Margin="5,0,0,0" x:Name="licenseChecked"></CheckBox>
+            <CheckBox Content="启用授权" lang:LanguageManager.LangText="启用授权" Foreground="{DynamicResource baseInfoForeground}" IsChecked="{Binding IsLicenseChecked,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Margin="5,0,0,0" x:Name="licenseChecked"></CheckBox>
         </StackPanel>
 
         <TextBlock Grid.Row="4" Text="按钮类型:" Grid.Column="2" lang:LanguageManager.LangText="按钮类型:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
         <StackPanel Grid.Row="4" Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" Grid.ColumnSpan="3" Margin="5,0,0,0">
-            <RadioButton Content="古典按钮" IsChecked="{Binding ButtonType,ConverterParameter=1,Converter={StaticResource ButtonTypeToBoolConverter},Mode=OneWay}" Command="{Binding ButtonCommand}" CommandParameter="1"></RadioButton>
-            <RadioButton Content="勾选框"  IsChecked="{Binding ButtonType,ConverterParameter=2,Converter={StaticResource ButtonTypeToBoolConverter},Mode=OneWay}" CommandParameter="2" Command="{Binding ButtonCommand}" Margin="20,0,0,0"></RadioButton>
-            <RadioButton Content="圆形单选框"  IsChecked="{Binding ButtonType,ConverterParameter=3,Converter={StaticResource ButtonTypeToBoolConverter},Mode=OneWay}" CommandParameter="3" Command="{Binding ButtonCommand}" Margin="20,0,0,0"></RadioButton>
+            <RadioButton Foreground="{DynamicResource baseInfoForeground}" Content="古典按钮" IsChecked="{Binding ButtonType,ConverterParameter=1,Converter={StaticResource ButtonTypeToBoolConverter},Mode=OneWay}" Command="{Binding ButtonCommand}" CommandParameter="1"></RadioButton>
+            <RadioButton Foreground="{DynamicResource baseInfoForeground}" Content="勾选框"  IsChecked="{Binding ButtonType,ConverterParameter=2,Converter={StaticResource ButtonTypeToBoolConverter},Mode=OneWay}" CommandParameter="2" Command="{Binding ButtonCommand}" Margin="20,0,0,0"></RadioButton>
+            <RadioButton Foreground="{DynamicResource baseInfoForeground}" Content="圆形单选框"  IsChecked="{Binding ButtonType,ConverterParameter=3,Converter={StaticResource ButtonTypeToBoolConverter},Mode=OneWay}" CommandParameter="3" Command="{Binding ButtonCommand}" Margin="20,0,0,0"></RadioButton>
         </StackPanel>
 
         <TextBlock Grid.Row="5" Text="工作目录:"  Grid.Column="2" lang:LanguageManager.LangText="工作目录:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
@@ -133,7 +133,7 @@
                 <TextBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Text="{Binding WorkSpace,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" VerticalAlignment="Top" Style="{StaticResource CommonTextBox}" Width="150" MinHeight="30" TextWrapping="WrapWithOverflow"  Margin="5,10,0,10"></TextBox>
                 <Button Width="50" Height="30" Content="..." VerticalAlignment="Top" Command="{Binding SelectWorkSpaceCommand}" Style="{StaticResource CommonButtonStyle}" Margin="5,10,0,0"></Button>
             </StackPanel>
-            <CheckBox IsChecked="{Binding IsUseRelativePath}" Command="{Binding UseRelativeCommand}" Content="使用相对路径" lang:LanguageManager.LangText="使用相对路径" Margin="5,18,0,0"  VerticalContentAlignment="Top"></CheckBox>
+            <CheckBox Foreground="{DynamicResource baseInfoForeground}" IsChecked="{Binding IsUseRelativePath}" Command="{Binding UseRelativeCommand}" Content="使用相对路径" lang:LanguageManager.LangText="使用相对路径" Margin="5,18,0,0"  VerticalContentAlignment="Top"></CheckBox>
         </StackPanel>
 
 
